okay sending off draft now

--- a/proposal.tex
+++ b/proposal.tex
@@ -45,7 +45,7 @@
 \begin{center}
   \textsc{\Large Project Proposal: Five Minute Physics}
   \\[8mm]
-  \textbf{Michael McClintock}, Alex ------
+  \textbf{Michael McClintock}, Alexander Van Nunen
 \end{center}
 
 \section*{Introduction and Background}
@@ -60,9 +60,9 @@ There are a number of factors that make smartphone based learning
 (often referred to as ubiquitous learning or just ``u-learning") an
 effective, if not inevitable, compliment to the more traditional
 methods of course and content delivery. These factors include the
-widespread smartphone reliance of university students and staff
-\cite{procsmart}, high convenience, powerful
-multimedia capabilities and good wireless and internet connectivity. 
+widespread smartphone reliance of university students and staff, high
+convenience, powerful multimedia capabilities and good wireless and
+internet connectivity \cite{worry}.
 
 While many universities have developed campus wide tools for
 smartphones. The use of u-learning solutions tailor-made for specific
@@ -139,14 +139,32 @@ devices using technologies such as PhoneGap.
 
 The content itself will be tailored to first year physics students at
 the University of Queensland. More specifically this project will be
-targetting the Fluids component of PHYS1171. The material will focus
-on the topics of buoyancy and the fluid dynamics of non-viscous
-fluids. The approach to designing content will be to look at effective
-content in e-learning systems aimed specifically at physics. A good
-example is the design of effective physics videos \cite{vid}
+targeting the Fluids component of PHYS1171. The material will focus
+on the topics of pressure/depth, buoyancy and the fluid dynamics of
+non-viscous fluids. 
 
+The approach to designing content will be to look at effective content
+in e-learning systems aimed specifically at physics. A good example is
+the design of effective physics videos \cite{vid}. Videos and
+animation based content isn't the only way to keep users interested.
+Simple things like the format and style of accompanying text and
+graphics matter and these aspects will also be investigated.  If time
+permits the possibility of adding interactive components like the
+ability for users to leave comments will be looked at.
 
 \section*{Timeline}
+
+\begin{itemize}
+\item Week 1-3. Familiarisation with topic. Produce Written proposal.  
+\item Week 3-4. Research into physics content best
+  practices.  Develop the structure of the content to be presented
+\item Week 4-5. Develop preliminary content using web technologies
+\item Week 5-6. Find/implement a simple method for delivering the
+  preliminary content to physical devices 
+\item Week 7-8. Refine material and prepare for trial on students 
+\item week 8-9. Test system on students and collect feedback 
+\item week 9-10. Analyse results and prepare report
+\end{itemize}
 
 \bibliographystyle{ieeetr}
 \bibliography{refs}
