--- a/refs.bib
+++ b/refs.bib
@@ -27,4 +27,11 @@
   howpublished={\url{http://phonegap.com/about}},
 }
 
+@misc{vid,
+  author={Derek Muller},
+  title={The key to effective educational science videos},
+  howpublished={\url{http://talentsearch.ted.com/video/Derek-Muller-The-key-to-effecti;TEDSydney}},
+}
+
+
 
