--- a/proposal.tex
+++ b/proposal.tex
@@ -52,19 +52,19 @@
 
 It is no secret that smartphones, tablets and other portable
 multimedia devices are on the rise. As reported in February 2012,
-487.7 million smartphones where shipped worldwide 2011.  This figure,
+487.7 million smartphones were shipped worldwide 2011.  This figure,
 up 63\% from 2010, also meant that smarthphone sales have overtaken
 the sale of personal computers \cite{canalys}. 
 
 There are a number of factors that make smartphone based learning
 (often referred to as ubiquitous learning or just ``u-learning") an
-effective, if not inevitable, compliment to the more traditional
+effective, if not inevitable, complement to the more traditional
 methods of course and content delivery. These factors include the
 widespread smartphone reliance of university students and staff, high
 convenience, powerful multimedia capabilities and good wireless and
 internet connectivity \cite{worry}.
 
-While many universities have developed campus wide tools for
+While many universities have developed campus-wide tools for
 smartphones. The use of u-learning solutions tailor-made for specific
 courses or subject areas is not widely accepted \cite{procsmart}.
 One reason is the lack of mature technology for content delivery that
@@ -113,9 +113,9 @@ solution to the problem of content delivery.
 Web 2.0 technologies such as blogs, wikis and interactive websites
 have changed the face of online interaction and collaboration
 \cite{procsmart}. These online applications are becoming good enough
-that at times its hard to know you're not running a native application
+that at times it's hard to know you're not running a native application
 on your PC. Also it is worth noting that web technologies (HTML, CSS
-and javascript) are open source, cross-platform, widespread and mature. 
+and javascript) are open-source, cross-platform, widespread and mature. 
 
 The major problem of delivering content effectively to the large
 number of smartphone and tablet like devices is dealing with their
@@ -141,16 +141,28 @@ The content itself will be tailored to first year physics students at
 the University of Queensland. More specifically this project will be
 targeting the Fluids component of PHYS1171. The material will focus
 on the topics of pressure/depth, buoyancy and the fluid dynamics of
-non-viscous fluids. 
+non-viscous fluids. Both Alex and I will choose a topic to
+construct material for. The proposed method is as follows
+
+\begin{itemize}
+  \item Brainstorm available methods and construct a concept map
+  \item Select appropriate material from available sources
+  \item Prototype the material and deliver to devices
+  \item Develop test for students and structure for feedback
+  \item Analyse feedback
+  \item Write report with results and future recommendations/changes
+\end{itemize}
 
 The approach to designing content will be to look at effective content
 in e-learning systems aimed specifically at physics. A good example is
 the design of effective physics videos \cite{vid}. Videos and
 animation based content isn't the only way to keep users interested.
 Simple things like the format and style of accompanying text and
-graphics matter and these aspects will also be investigated.  If time
-permits the possibility of adding interactive components like the
-ability for users to leave comments will be looked at.
+graphics matter. When designing the solution we will look for
+resources and examples of effective content layout and styling on
+mobile devices. If time permits the possibility of adding interactive
+components like the ability for users to leave comments will be looked
+at.
 
 \section*{Timeline}
 
