--- a/report/report.tex
+++ b/report/report.tex
@@ -126,6 +126,15 @@ Ab.
 
 \section{Methodology and Design}
 
+
+\subsection{Building the Mobile Applications}
+
+The conventional method for creating mobile applications (apps) is called native app development and the process depends heavily on the mobile operating system. The advantages of the "native" approach is that apps are very responsive (fast) and have full access to device specific features.
+
+However a number of different mobile operating systems have emerged each with their own specific ecosystem of tools for creating native apps. For example there is iOS (Apple), Android (Google), Windows Phone (Microsoft), WebOS (HP), Blackberry OS and Bada (Samsung). The reality is that students will have smartphones with a variety of different operating systems. So any decent m-learning system needs to be a cross-platform solution.
+
+
+
 \subsection{Content format}
 
 In order to address the project goals we started by looking at the content
