--- a/proposal/refs.bib
+++ b/proposal/refs.bib
@@ -27,6 +27,11 @@
   howpublished={\url{http://phonegap.com/about}},
 }
 
+@misc{md,
+  title={Markdown Basics},
+  howpublished={\url{http://daringfireball.net/projects/markdown/basics}},
+}
+
 @misc{vid,
   author={Derek Muller},
   title={The key to effective educational science videos},
