--- a/report/refs.bib
+++ b/report/refs.bib
@@ -23,8 +23,23 @@
 }
 
 @misc{phonegap,
-  title={About PhoneGap},
-  howpublished={\url{http://phonegap.com/about}},
+  title={PhoneGap Build},
+  howpublished={\url{https://build.phonegap.com/}},
+}
+
+@misc{md,
+  title={Markdown Basics},
+  howpublished={\url{http://daringfireball.net/projects/markdown/basics}},
+}
+
+@misc{git,
+  title={Git},
+  howpublished={\url{http://git-scm.com/}},
+}
+
+@misc{github,
+  title={Github},
+  howpublished={\url{https://github.com/about}},
 }
 
 @misc{vid,
