--- a/report/report.tex
+++ b/report/report.tex
@@ -307,7 +307,9 @@ While these results are promising we were more interested in hearing student com
 "More convient and accessible. Definitely get it up and running for apple iphones as majority of people will have this and use them" \\
 \rule[0.5ex]{1\columnwidth}{1pt}
 
-\subsection{Li}
+\subsection{Licensing issues}
+
+One setback we encountered when producing the apps was that iOS and Windows Phone will not let users install apps that are not verified through the respective app stores. This meant that while we were able to test the apps on Apple devices students were not.
 
 
 \section{Discussion}
